# Similar-PDF-Search-Tool

./: .gitignore  README.md  card.ui  data.db  func_db.py  func_json.py  func_pdf.py  func_similar.py  func_ui.py  main.py  main_window.py  main_window.ui  pyproject.toml  requirements.txt  settings.json
