[project]
name = "kapps-similar-drawings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "keyring>=25.7.0",
    "onnxruntime==1.20.0",
    "pandas>=3.0.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
]
